@@ -2,6 +2,10 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    [API Changes]
+    - Myriad now has run_future like shutdown_future, to tell when the framework is running.
+    - Test::Myriad has a ready sub, to tell when the underlying Myriad is running.
+
     [Bugs fixed]
     - Having multiple RPC added will not block and wait each others from reading from stream.
 
